--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <body>
     <div class="webgl-content">
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
+      <audio autoplay>
+        <source src="Study Music Alpha Waves Relaxing Studying Music, Brain Power, Focus Concentration Music, 161 (1) (1).wav">
+      </audio> 
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
