--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="title">Mandelbrot</div>
       </div>
     </div>
-      <audio controls autoplay>
+      <audio autoplay>
         <source src="/Study Music Alpha Waves Relaxing Studying Music, Brain Power, Focus Concentration Music, 161 (1) (1).wav" type="audio/wav">
       </audio> 
      
