--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </div>
       <audio autoplay>
-        <source src="Study Music Alpha Waves Relaxing Studying Music, Brain Power, Focus Concentration Music, 161 (1) (1).wav" type="audio/wav">
+        <source src="brainwaves.wav" type="audio/wav">
       </audio> 
      
    
