--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="title">Mandelbrot</div>
       </div>
     </div>
-      <audio autoplay>
+      <audio controls autoplay>
         <source src="brainwaves.wav" type="audio/wav">
       </audio> 
      
